--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,10 @@ spring.application.name=route-app-api
 server.port=8080
 
 # MongoDB Configuration
-spring.data.mongodb.uri=mongodb://localhost:27017/route_app_db
+# Use environment variable for MongoDB URI
+# Default to local MongoDB if MONGODB_URI is not set
+spring.data.mongodb.uri=${MONGODB_URI:mongodb://localhost:27017/route_app_db}
+
 spring.data.mongodb.auto-index-creation=false
 
 # Logging
